# autojob

./: .cruft.json  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
autojob/: api.py  chrome_driver.py  config.py  exceptions.py  main.py  posting.py  role.py  roles.py  roles_api.py  scrape.py  spreadsheet.py  utils.py  web_posting.py
tests/: conftest.py  data.py  test_config.py  test_module.py  test_roles.py
